--- a/minitalk/Makefile
+++ b/minitalk/Makefile
@@ -1,10 +1,20 @@
-SRCS = client.c server.c /utilis/ft_atoi.c /utilis/ft_printf/ft_printf.c /utilis/ft_printf/ft_putchar.c /utilis/ft_printf/ft_putnbr.c \
-	/utilis/ft_printf/ft_putstr.c
+
+
+SRCS_AND_SERVER =  server.c utilis/ft_atoi.c utilis/ft_printf/ft_printf.c \
+	utilis/ft_printf/ft_putchar.c utilis/ft_printf/ft_putnbr.c \
+	utilis/ft_printf/ft_putstr.c
+
+SRCS_AND_CLIENT =  client.c utilis/ft_atoi.c utilis/ft_printf/ft_printf.c \
+	utilis/ft_printf/ft_putchar.c utilis/ft_printf/ft_putnbr.c \
+	utilis/ft_printf/ft_putstr.c
+
 
 SERVER_NAME = server
 CLIENT_NAME = client
 
-OBJS = $(SRCS:%.c=%.o)
+SERVER_OBJS = $(SRCS_AND_SERVER:%.c=%.o)
+
+CLIENT_OBJS = $(SRCS_AND_CLIENT:%.c=%.o)
 
 FLAGS = -Wall -Wextra -Werror
 
@@ -15,14 +25,14 @@ all: $(SERVER_NAME) $(CLIENT_NAME)
 %.o: %.c ${DEPS}
 	cc ${FLAGS} -c $< -o $@
 
-$(SERVER_NAME): $(OBJS)
+$(SERVER_NAME): $(SERVER_OBJS)
 	$(CC) $(FLAGS) $^ -o $@
 
-$(CLIENT_NAME): $(OBJS)
+$(CLIENT_NAME): $(CLIENT_OBJS)
 	$(CC) $(FLAGS) $^ -o $@
 
 clean:
-	rm -f $(OBJ_SERVER) $(OBJ_CLIENT)
+	rm -f $(SERVER_OBJS) $(CLIENT_OBJS)
 
 fclean: clean
 	rm -f $(SERVER_NAME) $(CLIENT_NAME)
